force-app/main/default/objects/Candidate__c/fields/Resume_Link__c.field-meta.xml
<CustomField>
    <fullName>Resume_Link__c</fullName>
    <label>Resume Link</label>
    <type>Url</type>
</CustomField>