force-app/main/default/objects/Candidate__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Candidate Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Populated nightly by batch scoring job</description>
</CustomField>