force-app/main/default/objects/Candidate__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>LinkedIn</fullName><default>false</default></value>
            <value><fullName>Referral</fullName><default>false</default></value>
            <value><fullName>Job Board</fullName><default>false</default></value>
            <value><fullName>Company Website</fullName><default>false</default></value>
            <value><fullName>Other</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>